<resources>
    <string name="app_name">Workout</string>
    <string name="action_settings">Settings</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete">Delete</string>

    <string name="no">No</string>
    <string name="yes">Yes</string>

    <string name="exercise_label">Exercise</string>
    <string name="exercise_name">Exercise Name</string>
    <string name="exercise_exit_message">Do you want to save this exercise?</string>
    <string name="exercise_delete_message">Do you want to delete this exercise?</string>

    <string name="break_button">Start Break</string>
    <string name="exercise_button">Exercise</string>
    <string name="finish_exercise_button">Finish Exercise</string>
    <string name="series_number_label">Series number:</string>
    <string name="break_splash_text">Break has finished</string>
    <string name="break_splash_series_text">Start series: %d</string>

    <string name="exercise_item_name">(%d series) %s</string>

    <string name="stop">Stop</string>
    <string name="restart">Restart</string>

    <string name="settings_label">Settings</string>

    <string name="breakTimeSummary">%d seconds</string>

    <string name="preference_general_title">General</string>
    <string name="preference_notifications_title">Notifications</string>
    <string name="preference_notification_vibration_title">Vibration</string>
    <string name="preference_notification_vibration_summary">Enable vibration when break finishes</string>
    <string name="preference_notification_vibration_value_title">Vibration Time</string>
    <string name="preference_notification_sound_title">Sound Notification</string>
    <string name="preference_notification_sound_summary">Enable sound when break finishes</string>
    <string name="preference_general_break_time_title">Break Time</string>
    <string name="preference_general_break_time_dialog_title">Break Time (seconds)</string>
</resources>
