<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.morcinek.workout.exercise.ExerciseActivity">

    <TextView
        android:id="@+id/seriesNumberText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/big_margin"
        android:text="1"
        style="@style/SeriesText" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/seriesNumberText"
        android:layout_alignTop="@id/seriesNumberText"
        android:layout_toLeftOf="@id/seriesNumberText"
        android:layout_toStartOf="@id/seriesNumberText"
        android:gravity="center"
        android:text="@string/series_number_label" />

    <Button
        android:id="@+id/breakButton"
        style="@style/OvalButtonText"
        android:layout_centerInParent="true"
        android:text="@string/break_button" />

    <Button
        android:id="@+id/finishButton"
        style="@style/OvalButtonText.Secondary"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/double_margin"
        android:text="@string/finish_exercise_button" />

</RelativeLayout>
